Making building possible with jitpack